--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
     <title>Bikewatching</title>
   </head>
   <body>
     <h1>🚴🏼‍♀️ Bikewatching </h1>
+    <link rel="stylesheet" href="global.css" />
   </body>
 </html>
