--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"/>
+    <script src="map.js" type="module"></script>
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
     <title>Bikewatching</title>
+    <div id="map"></div>
   </head>
   <body>
     <h1>🚴🏼‍♀️ Bikewatching </h1>
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="map.css" />
   </body>
 </html>
