--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="map.js" type="module"></script>
     
     <div id="map"></div>
+    <div id="map">
+        <svg></svg>
+      </div>
   </head>
   <body>
     <h1>🚴🏼‍♀️ Bikewatching </h1>
